--- a/src/resources/sass/components/product-list/_filters-meta.scss
+++ b/src/resources/sass/components/product-list/_filters-meta.scss
@@ -10,6 +10,9 @@
 		display: none;
 	}
 
+	@include max-screen($screen-xs-max) {
+		clear: both;
+	}
 }
 
 .filters-meta__count {
